--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Boostrap 5</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
-        <button>Click Me</button>
+        <button class="btn btn-success ">Click Me</button>
+        <a href="#" class="btn btn-danger">Click Me</a>
+        <input type="button" class="btn btn-primary" value="Click Me"/>
+        <input type="submit" class="btn btn-warning">
+        
+        <button class="btn btn-info btn-lg">Click Me</button>
+        <button class="btn btn-secondary btn-sm">Click Me</button>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
 </html>
