--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <input type="submit" class="btn btn-warning">
         
         <button class="btn btn-info btn-lg">Click Me</button>
-        <button class="btn btn-secondary btn-sm">Click Me</button>
+        <button class="btn btn-secondary btn-sm" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Click Me</button>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </body>
