--- a/bootstrap3Project.html
+++ b/bootstrap3Project.html
@@ -3,15 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Grid system</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+        <style>
+            .s_tbdr{
+                height:50px;
+                background-color: red;
+                border:1px dashed #000;
+            }
+            .s_green{
+                background-color: green;
+            }
+            .s_blue{
+                background-color: blue;
+            }
+            .s_orange{
+                background-color: orange;
+            }
+        </style>
     </head>
     <body>
         <div class="row">
-            <div class="col-4">A</div>
-            <div class="col-4">B</div>
-            <div class="col-4">C</div>
+            <div class="col-1 col-sm-9 col-md-6 col-lg-2 col-xl-3 col-xxl-1 s_tbdr s_red">A</div>
+            <div class="col-1 col-sm-1 col-md-2 col-lg-2 col-xl-3 col-xxl-2 s_tbdr s_green">B</div>
+            <div class="col-1 col-sm-1 col-md-2 col-lg-2 col-xl-3 col-xxl-3 s_tbdr s_blue">C</div>
+            <div class="col-9 col-sm-1 col-md-2 col-lg-6 col-xl-3 col-xxl-6 s_tbdr s_orange">D</div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
